Fix white space between member name, role and text of bios

--- a/src/app/features/home/biographies/biographies.component.sass
+++ b/src/app/features/home/biographies/biographies.component.sass
@@ -18,8 +18,11 @@
   width: 340px
   object-fit: cover
 
-.biographies__biography-text
-  margin-top: 16px
-
 .biographies__biography-name
   font-size: 30px
+
+.biographies__biography-role
+  margin-top: 4px
+
+.biographies__biography-text
+  margin-top: 12px
